@@ -291,20 +291,19 @@ typedef struct syntaxtype {
 #define BACKWARDS_SEARCH	(1<<14)
 #define MULTIBUFFER		(1<<15)
 #define SMOOTH_SCROLL		(1<<16)
-#define DISABLE_CURPOS		(1<<17)	/* Damn, we still need it. */
-#define REBIND_DELETE		(1<<18)
-#define NO_CONVERT		(1<<19)
-#define BACKUP_FILE		(1<<20)
-#define NO_RCFILE		(1<<21)
-#define NO_COLOR_SYNTAX		(1<<22)
-#define PRESERVE		(1<<23)
-#define HISTORYLOG		(1<<24)
-#define RESTRICTED		(1<<25)
-#define SMART_HOME		(1<<26)
-#define WHITESPACE_DISPLAY	(1<<27)
-#define MORE_SPACE		(1<<28)
-#define TABS_TO_SPACES		(1<<29)
-#define USE_UTF8		(1<<30)
+#define REBIND_DELETE		(1<<17)
+#define NO_CONVERT		(1<<18)
+#define BACKUP_FILE		(1<<19)
+#define NO_RCFILE		(1<<20)
+#define NO_COLOR_SYNTAX		(1<<21)
+#define PRESERVE		(1<<22)
+#define HISTORYLOG		(1<<23)
+#define RESTRICTED		(1<<24)
+#define SMART_HOME		(1<<25)
+#define WHITESPACE_DISPLAY	(1<<26)
+#define MORE_SPACE		(1<<27)
+#define TABS_TO_SPACES		(1<<28)
+#define USE_UTF8		(1<<29)
 
 /* Control key sequences.  Changing these would be very, very bad. */
 #define NANO_CONTROL_SPACE 0
